# super-ragondin

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.claude/skills/proptest-debug/: SKILL.md
.github/actions/install-system-deps/: action.yml
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/codemode/: Cargo.toml
crates/codemode/src/: engine.rs  interaction.rs  lib.rs  llm.rs  prompt.rs  sandbox.rs  session.rs  suggestions.rs
crates/codemode/src/tools/: ask_user.rs  generate_image.rs  get_document.rs  list_dirs.rs  list_files.rs  mkdir.rs  mod.rs  path_utils.rs  save_file.rs  scratchpad.rs  search.rs  send_mail.rs  sub_agent.rs  web_fetch.rs  web_search.rs
crates/codemode/tests/: ask_clarification.rs
crates/cozy-client/: Cargo.toml
crates/cozy-client/src/: client.rs  error.rs  lib.rs  realtime.rs  types.rs
crates/gui/: Cargo.toml  tauri.conf.json
crates/gui-e2e/: Cargo.toml
crates/gui-e2e/src/: lib.rs
crates/gui-e2e/tests/: ask_chip_interaction.rs  ask_clarification_screen.rs  ask_new_session_button.rs  auth_screen.rs  main_layout_screen.rs  setup_form_interaction.rs  setup_screen.rs
crates/gui/capabilities/: default.json
crates/gui/src/: commands.rs  main.rs
crates/rag/: Cargo.toml
crates/rag/src/: chunker.rs  config.rs  embedder.rs  indexer.rs  lib.rs  searcher.rs  store.rs
crates/rag/src/extractor/: image.rs  mod.rs  office.rs  pdf.rs  plaintext.rs
crates/sync/: Cargo.toml
crates/sync/src/: config.rs  error.rs  ignore.rs  lib.rs  logging.rs  model.rs  planner.rs  remote.rs  simulator.rs  watcher_mux.rs
crates/sync/src/config/: syncignore
crates/sync/src/local/: scanner.rs  watcher.rs
crates/sync/src/remote/: auth.rs  client.rs  realtime.rs
crates/sync/src/simulator/: mock_remote.rs  runner.rs
crates/sync/src/store/: tree.rs
crates/sync/src/sync/: conflict_name.rs  engine.rs
crates/sync/tests/: changes_feed_conformance.rs  config_tests.rs  integration_tests.rs  local_tests.rs  planner_tests.rs  realtime_tests.rs  remote_tests.rs  simulator_tests.proptest-regressions  simulator_tests.rs  store_tests.rs  sync_tests.rs
docs/: clients-comparison.md
docs/guides/: ci.md  frontend.md  proptest.md  rag.md  sync.md
docs/plans/: 2026-02-02-cozy-sync-poc.md  2026-02-08-structured-logging.md  2026-02-09-move-rename-support.md  2026-02-26-parallel-transfers.md  2026-02-28-changes-feed-conformance.md  2026-03-10-rag-system.md  2026-03-11-codemode-rag.md  2026-03-11-ignore-rules.md  2026-03-13-ask-context-awareness.md  2026-03-13-generate-image-tool.md  2026-03-13-realtime-notifications.md  2026-03-13-save-file-list-dirs.md  2026-03-16-scratchpad-tool.md  2026-03-17-ask-suggestions.md  2026-03-19-cozy-client-crate-and-sendmail-design.md  2026-03-19-tauri-gui.md  2026-03-20-tauri-specta-bindings.md  2026-03-21-gui-ask-assistant.md  2026-03-24-gui-e2e-tests-design.md  2026-03-24-visual-regression.md  2026-03-26-logging-improvements.md  2026-03-27-ask-user-clarification.md  2026-03-29-web-fetch-search-design.md  2026-03-29-web-fetch-search-plan.md  2026-03-31-ask-sessions-design.md  2026-03-31-ask-sessions-plan.md  2026-03-31-stopped-client-restart.md  2026-04-07-fulltext-search.md
docs/specs/: 2026-03-10-rag-system-design.md  2026-03-11-codemode-rag-design.md  2026-03-13-ask-context-awareness-design.md  2026-03-13-generate-image-tool-design.md  2026-03-13-save-file-list-dirs-design.md  2026-03-16-ask-suggestions-design.md  2026-03-16-scratchpad-tool-design.md  2026-03-19-tauri-gui-design.md  2026-03-20-tauri-specta-bindings-design.md  2026-03-21-gui-ask-assistant-design.md  2026-03-26-logging-improvements-design.md  2026-03-27-ask-user-clarification-design.md  2026-03-31-stopped-client-restart-design.md  2026-04-07-fulltext-search-design.md
docs/superpowers/plans/: 2026-03-10-rag-system.md
docs/superpowers/specs/: 2026-03-10-rag-system-design.md
gui-frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
gui-frontend/src/: App.svelte  bindings.ts
gui-frontend/src/lib/: AskPanel.svelte  Auth.svelte  MainLayout.svelte  Setup.svelte  SyncPanel.svelte  Syncing.svelte
src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  model.rs  planner.rs  store.rs  sync.rs  util.rs
src/local/: scanner.rs  watcher.rs
src/remote/: auth.rs  client.rs
src/simulator/: mock_fs.rs  mock_remote.rs  runner.rs
src/store/: tree.rs
src/sync/: conflict_name.rs  engine.rs
tests/: changes_feed_conformance.rs  config_tests.rs  integration_tests.rs  local_tests.rs  planner_tests.rs  remote_tests.rs  simulator_tests.proptest-regressions  simulator_tests.rs  store_tests.rs  sync_tests.rs
