[package]
name = "cozy-desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
fjall = "2"
inotify = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
md-5 = "0.10"
hex = "0.4"
url = "2"
urlencoding = "2"
chrono = "0.4"
base64 = "0.22"
bytes = "1"
dirs = "6.0.0"
uuid = { version = "1.20.0", features = ["v4"] }
tracing-appender = "0.2"
futures = "0.3.32"

[dev-dependencies]
proptest = "1"
tempfile = "3"
tokio-test = "0.4"
wiremock = "0.6"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
