[workspace]
members = ["crates/sync", "crates/rag", "crates/cli", "crates/codemode", "crates/cozy-client"]
resolver = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
tokio-util = "0.7.18"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
