[package]
name = "super-ragondin"
version = "0.1.0"
edition = "2024"

[dependencies]
super-ragondin-sync = { path = "../sync" }
super-ragondin-rag = { path = "../rag" }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0.0"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.20.0", features = ["v4"] }

[lints]
workspace = true
