[package]
name = "super-ragondin"
version = "0.1.0"
edition = "2024"

[dependencies]
super-ragondin-sync = { path = "../sync" }
super-ragondin-rag = { path = "../rag" }
super-ragondin-codemode = { path = "../codemode" }
dirs = "6.0.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.20.0", features = ["v4"] }
tokio-util = { workspace = true }

[lints]
workspace = true
