[package]
name = "super-ragondin-cozy-client"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
bytes = "1.11.1"
chrono = "0.4.44"
futures = "0.3.32"
hex = "0.4.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2"
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
tokio-util.workspace = true
tracing = "0.1.44"
url = "2.5.8"
urlencoding = "2.1.3"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.27.0"
wiremock = "0.6.5"
