[package]
name = "super-ragondin-gui"
version = "0.1.0"
edition = "2021"
description = "Super Ragondin desktop application"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
opener = "0.7"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
super-ragondin-sync = { path = "../sync" }
tracing = "0.1.44"

[dev-dependencies]
tempfile = "3"
