[package]
name = "super-ragondin-rag"
version = "0.1.0"
edition = "2024"

[dependencies]
super-ragondin-sync = { path = "../sync" }

# Full-text search
tantivy = "0.22"

# Chunking
chonkie = { version = "0.1.1", features = ["tiktoken"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# MIME detection
infer = "0.19.0"

# PDF extraction
pdf-extract = "0.7"

# PDF rendering (for scanned PDF fallback)
pdfium-render = { version = "0.8", features = ["thread_safe"] }

# Office document parsing
calamine = { version = "0.26", features = ["dates"] }
zip = "2"
quick-xml = { version = "0.37", features = ["serialize"] }

# Image / base64
base64 = "0.22"
image = "0.25"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Error handling + logging
anyhow = "1"
tracing = "0.1"
thiserror = "2"
tiktoken-rs = "0.6"

[dev-dependencies]
tempfile = "3"
temp-env = "0.3"

[lints]
workspace = true
